@@ -1,3 +1,11 @@
+2001-12-17  Petr Mikulik  <mikulik@physics.muni.cz>
+
+	* src/util.c: Fix graph_error() to avoid gnuplot crash for log axes
+	with negative min/max range value in splot.
+
+	* src/pm3d.c: More appropriate error message for negative cb range
+	and log z axis.
+
 2001-12-16  Petr Mikulik  <mikulik@physics.muni.cz>
 
 	* src/color.c: Fine tuning of the default color box size and
